--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@angular/platform-browser": "^15.1.1",
     "@angular/platform-browser-dynamic": "^15.1.1",
     "@angular/router": "^15.1.1",
+    "angular-prism": "^0.1.20",
     "buttercms": "^1.2.14",
     "keycloak-angular": "^13.0.0",
     "keycloak-js": "^20.0.3",
+    "prismjs": "^1.29.0",
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -32,6 +34,7 @@
     "@angular/cli": "~15.1.2",
     "@angular/compiler-cli": "^15.1.1",
     "@types/jasmine": "~4.3.0",
+    "@types/prismjs": "^1.26.1",
     "@types/uuid": "^9.0.4",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
